# assetsmangment

./: .gitignore  .importlinter  .mcp.json  CLAUDE.md  Dockerfile  HANDOFF.md  Makefile  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: deps.py  router.py  schemas.py
app/domain/: models.py  mp4.py  ports.py  query.py  rules.py
app/infrastructure/: aliyun_oss.py  content_safety.py  dashscope_asr.py  dashscope_embed.py  dashscope_llm.py  (+21 more)
deploy/: docker-compose.yml  ecs-setup.sh  pack.cmd  restart.sh
docs/: DEPLOY_ECS.md  PHASE2.md  PRD.md  card_audit_notes.txt  content-safety-tuning.md  rules.json  schema.sql
frontend/: index.html
k8s/: deployment.yaml  hpa.yaml  service.yaml
scripts/: _check_all_tasks.py  _check_reports.py  _check_task_reports.py  _check_training.py  _fix_rule9.py  _list_rules.py  _merge_rules_3_19.py  _show_rules_7_25.py  _simplify_rule7_guidance.py  _simplify_rule_conditions.py  assign_to_project.py  load_test.js  migrate_all_to_pg.py  migrate_rules_to_pg.py  reindex_vectors.py  setup.sh  ui_qc.sh  update_guidance_qs.py  verify.sh
specs/: 物料反解.md
tests/: conftest.py  test_api.py  test_audit_pipeline.py  test_audit_pool.py  test_audit_tasks.py  test_feature2.py  test_frame_concurrency.py  test_migrate_rules.py  test_mvp_services.py  test_pagination.py  test_pg_repos.py  test_pg_rule_repo.py  test_projects.py  test_recheck.py  test_retry.py  test_rule_parsing.py  test_rules_edit.py  test_snowflake.py  test_tavily.py  test_video_parsing.py  test_works.py  ui_qc.mjs  ui_qc.py
(+30 files in other folders)
